# nocturne

./: .gitignore  Directory.Packages.props  appsettings.example.json  nocturne.sln
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
docs/: compatibility-proxy-config.md
docs/plans/: 2025-01-22-myfitnesspal-matching-design.md  2026-01-22-aspire-publish-runtime-config.md  2026-02-02-compression-low-detection-design.md  authentication-oidc-implementation.md  oref-rust-port.md
src/API/Nocturne.API/: Nocturne.API.csproj  Program.cs  README.md  nswag.json
src/Aspire/Nocturne.Aspire.Host/: Nocturne.Aspire.Host.csproj  Program.cs
src/Aspire/Nocturne.Aspire.Hosting/: DemoServiceExtensions.cs  DeveloperCertificateExportHook.cs  (+2 more)
src/Core/oref/: .gitignore  Cargo.toml  cbindgen.toml
src/Core/oref/examples/: OrefBridge.swift
src/Core/oref/include/: oref.h
src/Core/oref/src/: error.rs  lib.rs
src/Core/oref/src/autosens/: mod.rs
src/Core/oref/src/cob/: mod.rs
src/Core/oref/src/determine_basal/: algorithm.rs  mod.rs  predictions.rs  smb.rs
src/Core/oref/src/ffi/: mod.rs
src/Core/oref/src/insulin/: calculate.rs  curves.rs  mod.rs
src/Core/oref/src/iob/: history.rs  mod.rs  total.rs
src/Core/oref/src/meal/: mod.rs
src/Core/oref/src/profile/: basal.rs  carbs.rs  isf.rs  mod.rs  targets.rs
src/Core/oref/src/types/: cob.rs  glucose.rs  iob.rs  mod.rs  output.rs  profile.rs  treatment.rs
src/Core/oref/src/utils/: mod.rs  round.rs  time.rs
src/Core/oref/src/wasm/: mod.rs
src/Web/: package.json  pnpm-lock.yaml
(+382 files in other folders)
