[package]
name = "oref"
version = "0.1.0"
edition = "2021"
description = "OpenAPS Reference Implementation in Rust - IOB, COB, and dosing algorithms"
license = "MIT"
repository = "https://github.com/nightscout/nocturne"
keywords = ["diabetes", "openaps", "insulin", "glucose", "medical"]
categories = ["science", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["std", "serde"]
std = []
ffi = ["std"]
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
serde = ["dep:serde", "dep:serde_json", "chrono/serde"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
thiserror = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# WASM (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
approx = "0.5"

# Benchmarks - uncomment when bench files are created
# [[bench]]
# name = "iob_bench"
# harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
